--- a/hw3IronManAndNasa/src/blocks/header/header.scss
+++ b/hw3IronManAndNasa/src/blocks/header/header.scss
@@ -4,17 +4,32 @@
         width: 95vw;
         height: 70vh;
         background: linear-gradient(to right bottom, #1a191f, #373743, #808080, #fff);
-        opacity: 0.6;
+        opacity: 0.95;
+        padding-bottom: 7rem;
+        // z-index: 1;
+    }
+
+    &__top{
+        display: flex;
+        flex-direction: row;
+        height: 10%;
+        align-items: center;
+    }
+
+    &__menu{
+        color: #fff;
+        padding-left: 5rem;
     }
 
     &__logo{
         display: flex;
         justify-content: center;
+        width: 100%;
+        height: 100%;
 
         &-link{
             display: flex;
-            width: 7vw;
-            height: 5vh;
+            width: 10rem;
             background: url('../img/the_avengers___logo_original___3d_02___png_by_itstotallytoxic-dccakw7.png');
             background-position: center;
             background-size: cover;
@@ -22,19 +37,36 @@
 
     }
 
+    &__center{
+        display: flex;
+        flex-direction: row;
+        height: 100%;
+    }
+
     &__nav{
+        display: flex;
+        flex-direction: column;
+        width: 5rem;
+        height: 100%;
 
-        // &-ul{
-        // }
+        &-ul{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 100%;
+            height: 100%;
+            padding: 1rem 2rem;
+        }
 
-        // &-li{
-        // }
+        &-li{
+            display: flex;
+            flex-direction: column;
+        }
 
         &-link{
-            transform: rotate(90deg);
-            transform-origin: left top 0;
-            // word-wrap: break-word;
-            // writing-mode: vertical-rl;
+            display: flex;
+            writing-mode: vertical-lr;
+            transform: rotate(180deg);
         }
 
     }
