--- a/hw3IronManAndNasa/src/blocks/header/header.scss
+++ b/hw3IronManAndNasa/src/blocks/header/header.scss
@@ -2,23 +2,22 @@
 
     &__wrap{
         width: 95vw;
-        height: 70vh;
-        background: linear-gradient(to right bottom, #1a191f, #373743, #808080, #fff);
-        opacity: 0.95;
-        padding-bottom: 7rem;
-        // z-index: 1;
+        height: 80vh;
+        background: linear-gradient(to right bottom, #1a191f, #373743);
+        opacity: 0.9;
+        padding-bottom: 12vh;
     }
 
     &__top{
         display: flex;
         flex-direction: row;
-        height: 10%;
+        height: 6vh;
         align-items: center;
     }
 
     &__menu{
         color: #fff;
-        padding-left: 5rem;
+        padding-left: 3vw;
     }
 
     &__logo{
@@ -29,7 +28,7 @@
 
         &-link{
             display: flex;
-            width: 10rem;
+            width: 8vw;
             background: url('../img/the_avengers___logo_original___3d_02___png_by_itstotallytoxic-dccakw7.png');
             background-position: center;
             background-size: cover;
@@ -46,7 +45,7 @@
     &__nav{
         display: flex;
         flex-direction: column;
-        width: 5rem;
+        width: 3vw;
         height: 100%;
 
         &-ul{
@@ -55,7 +54,7 @@
             justify-content: space-between;
             width: 100%;
             height: 100%;
-            padding: 1rem 2rem;
+            padding: 1vh 2vw;
         }
 
         &-li{
