--- a/hw3IronManAndNasa/src/blocks/heroes/heroes.scss
+++ b/hw3IronManAndNasa/src/blocks/heroes/heroes.scss
@@ -17,7 +17,8 @@
         width: 40%;
         height: 100%;
         background: #fff;
-        // z-index: 5;
+        opacity: 1;
+        position: relative;
     }
 
     &__right-section{
@@ -28,13 +29,14 @@
         background: url('../img/avengers-infinity-war-trailer-reveals-how-the-guardians-of-t_4zfr.jpg');
         background-position: center;
         background-size: cover;
+        position: relative;
         z-index: 0;
 
         &::after{
             content: "";
                 background-color: #19191e;
-                width: 53%;
-                height: 60.1%;
+                width: 100%;
+                height: 100%;
                 position: absolute;
                 opacity: 0.9;
                 z-index: -1;
