22/02/19(added iron man)

--- a/hw3IronManAndNasa/src/blocks/heroes/heroes.pug
+++ b/hw3IronManAndNasa/src/blocks/heroes/heroes.pug
@@ -1,6 +1,6 @@
 section.heroes
     .heroes__wrap
         .heroes__left-section
-            p.heroes__title-text|iron
+            p.heroes__title-text.red|iron
         .heroes__right-section
-            p.heroes__title-text|man
+            p.heroes__title-text.white|man
