--- a/hw3IronManAndNasa/src/styles/fonts.scss
+++ b/hw3IronManAndNasa/src/styles/fonts.scss
@@ -25,3 +25,12 @@
     text-transform: uppercase;
     font-weight: bolder;
 }
+
+.red{
+    color: red;
+    text-align: right;
+}
+
+.white{
+    color: white;
+}
