--- a/hw3IronManAndNasa/src/blocks/header/header.scss
+++ b/hw3IronManAndNasa/src/blocks/header/header.scss
@@ -23,8 +23,9 @@
     &__logo{
         display: flex;
         justify-content: center;
-        width: 100%;
+        width: 10vw;
         height: 100%;
+        margin: auto;
 
         &-link{
             display: flex;
@@ -51,7 +52,7 @@
         &-ul{
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: space-around;
             width: 100%;
             height: 100%;
             padding: 1vh 2vw;
