--- a/hw3IronManAndNasa/src/styles/main.scss
+++ b/hw3IronManAndNasa/src/styles/main.scss
@@ -5,3 +5,4 @@
 @import './src/blocks/bodybg/bodybg';
 @import './src/blocks/header/header';
 @import './src/blocks/heroes/heroes';
+@import './slider';
