--- a/hw3IronManAndNasa/src/blocks/heroes/heroes.scss
+++ b/hw3IronManAndNasa/src/blocks/heroes/heroes.scss
@@ -1,17 +1,25 @@
+.heroes__wrap{
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+// !!! STYLE IRON !!! //
+
 .heroes{
     display: flex;
     flex-direction: row;
     background: black;
     width: 93%;
 
-    &__wrap{
+    &__iron{
         display: flex;
         flex-direction: row;
         width: 100%;
         height: 100%;
     }
 
-    &__left-section{
+    &__left-section-iron{
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -23,7 +31,139 @@
         
     }
 
-    &__right-section{
+    &__right-section-iron{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 60%;
+        height: 100%;
+        background: url('../img/Avengers-2-Age-of-Ultron-Mental-Toughness.jpg');
+        background-position: center;
+        background-size: cover;
+        position: relative;
+        z-index: 0;
+
+        &::after{
+            content: "";
+            background-color: #19191e;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            opacity: 0.9;
+            z-index: -1;
+        }
+
+        &::before{
+            content: "";
+            background: url('../img/ironman_PNG66.png');
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+            width: 22vw;
+            height: 83vh;
+            position: absolute;
+            left: -10vw;
+            z-index: 1;
+        }
+
+    }
+
+}
+
+// !!! STYLE SPIDER !!! //
+
+.heroes{
+    display: flex;
+    flex-direction: row;
+    background: black;
+    width: 93%;
+
+    &__spider{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__left-section-spider{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 40%;
+        height: 100%;
+        background: #fff;
+        opacity: 1;
+        position: relative;
+        
+    }
+
+    &__right-section-spider{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 60%;
+        height: 100%;
+        background: url('../img/Avengers-3-Infinity-War-Spider-Man-Marvel-Movies.jpg');
+        background-position: center;
+        background-size: cover;
+        position: relative;
+        z-index: 0;
+
+        &::after{
+            content: "";
+            background-color: #19191e;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            opacity: 0.9;
+            z-index: -1;
+        }
+
+        &::before{
+            content: "";
+            background: url('../img/spider_man_PNG33.png');
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+            width: 22vw;
+            height: 83vh;
+            position: absolute;
+            left: -10vw;
+            z-index: 1;
+        }
+
+    }
+
+}
+
+// !!! STYLE CAPTAIN !!! //
+
+.heroes{
+    display: flex;
+    flex-direction: row;
+    background: black;
+    width: 93%;
+
+    &__captain{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 100%;
+    }
+
+    &__left-section-captain{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 40%;
+        height: 100%;
+        background: #fff;
+        opacity: 1;
+        position: relative;
+        
+    }
+
+    &__right-section-captain{
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -47,11 +187,10 @@
 
         &::before{
             content: "";
-            background: url('../img/ironman_PNG66.png');
+            background: url('../img/captain_america_PNG91.png');
             background-position: center;
-            background-size: cover;
-            // width: 25%;
-            // height: 100%;
+            background-size: contain;
+            background-repeat: no-repeat;
             width: 22vw;
             height: 83vh;
             position: absolute;
