--- a/hw3IronManAndNasa/src/blocks/header/header.pug
+++ b/hw3IronManAndNasa/src/blocks/header/header.pug
@@ -11,7 +11,7 @@ header.header
                     li.header__nav-li
                         a.header__nav-link(href="#")|iron man
                     li.header__nav-li
-                        a.header__nav-link(href="#")|spider man
+                        a.header__nav-link.nav-circle(href="#")|spider man
                     li.header__nav-li
                         a.header__nav-link(href="#")|captain america
             include ../heroes/heroes.pug
