--- a/hw3IronManAndNasa/src/styles/slider.scss
+++ b/hw3IronManAndNasa/src/styles/slider.scss
@@ -5,24 +5,26 @@
 .prev, .next{
     cursor: pointer;
     position: absolute;
-    top: 50%;
+    right: 0;
     width: auto;
-    margin-top: -5rem;
     color: #fff;
-    font-size: 3rem;
+    font-size: 4vh;
     transition: 0.6s ease;
-    margin-left: 4rem;
+    margin-right: 6vw;
 
     &:hover{
-        color: #0070af;
+        color: #e03d24;
     }
 
 }
 
+.prev{
+    bottom: 7vh;
+}
+
 
 .next{
-    right: 0;
-    margin-right: 4rem;
+    top: 4vw;
 }
 
 .dot-wrap{
