27/02/19(finish header nav)

--- a/hw4RWD/src/blocks/header/header.pug
+++ b/hw4RWD/src/blocks/header/header.pug
@@ -8,11 +8,27 @@ header.header
                     nav.header__nav
                         ul.header__nav-ul
                             li.header__nav-li
-                                a.header__nav-link(href="#")|explore
+                                a.header__nav-link.header__link-fonts(href="#")|explore
                             li.header__nav-li
-                                a.header__nav-link(href="#")|event
+                                a.header__nav-link.header__link-fonts(href="#")|event
                             li.header__nav-li
-                                a.header__nav-link(href="#")|acievements
+                                a.header__nav-link.header__link-fonts(href="#")|acievements
                             li.header__nav-li
-                                a.header__nav-link(href="#")|top ten
+                                a.header__nav-link.header__link-fonts(href="#")|top ten
                 .header__menu-right
+                    .header__social
+                        ul.header__social-ul
+                            li.header__social-li
+                                a.header__social-link.header__link-fonts(href="#")|signin
+                            li.header__social-li
+                                a.header__social-link.header__link-fonts(href="#")|signup
+                            li.header__social-li
+                                a.header__social-link(href="#")
+                                    i(class="fab fa-facebook-f")
+                            li.header__social-li
+                                a.header__social-link(href="#")
+                                    i(class="fab fa-twitter")
+                            li.header__social-li
+                                a.header__social-link(href="#")
+                                    i(class="fab fa-google-plus-g")
+        
