--- a/hw4RWD/src/styles/global.scss
+++ b/hw4RWD/src/styles/global.scss
@@ -37,8 +37,8 @@ html{
     font-family: 'Lato', sans-serif;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.6rem;
-    max-width: 192rem;
-    // min-width: 16rem;
+    max-width: 130rem;
+    min-width: 16rem;
     margin: 0 auto;
 }
 
