--- a/hw4RWD/src/blocks/header/header.scss
+++ b/hw4RWD/src/blocks/header/header.scss
@@ -27,23 +27,19 @@
             width: 100%;
             height: 100%;
             display: flex;
+            flex-direction: row;
             justify-content: space-between;
+            flex-wrap: wrap;
         }
 
         &-left{
             display: flex;
-            width: 35.8%;
-            background-color: rgb(240, 14, 14);
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            width: 46%;
             height: 100%;
-            margin-left: 5rem;
-        }
-
-        &-right{
-            display: flex;
-            width: 19.23%;
-            height: 100%;
-            background-color: rgb(243, 12, 12);
-            margin-right: 4rem;
+            margin-left: 4rem;
         }
 
     }
@@ -51,6 +47,42 @@
     &__nav-ul{
         display: flex;
         flex-direction: row;
+        width: 45rem;
+        justify-content: space-evenly;
+    }
+
+    &__logo-link{
+        display: flex;
+        width: 3.6rem;
+        height: 4rem;
+        background: url('../img/LOGO1.png');
+        background-position: center;
+        background-size: cover;
+        // filter: grayscale(100%);
+        // filter: hue-rotate(90deg);
+        // filter: hue-rotate(-0.25turn);
+        // mix-blend-mode: color;
+
+    }
+
+    &__menu-right{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 26%;
+        height: 100%;
+        margin-right: 4rem;
+    }
+
+    &__social{
+        width: 100%;
+    }
+
+    &__social-ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
     }
 
 }
