01/03/19(finish desktop version header)

--- a/hw4RWD/src/blocks/header/header.pug
+++ b/hw4RWD/src/blocks/header/header.pug
@@ -31,4 +31,22 @@ header.header
                             li.header__social-li
                                 a.header__social-link(href="#")
                                     i(class="fab fa-google-plus-g")
-        
+        .header__title
+            .header__title-wrap
+                p.header__title__title-text|climber commiunity
+                p.header__title__subtitle-text|Chalenge your self, climb it!
+                a.header__title__link.header__title__link-text(href="#")|go
+        .header__bottom
+            .header__bottom-wrap
+                .header__bottom-piple
+                    ul.header__bottom-ul
+                        li.header__bottom-li
+                            a.header__bottom-link.people__1(href="#")
+                        li.header__bottom-li
+                            a.header__bottom-link.people__2(href="#")
+                        li.header__bottom-li
+                            a.header__bottom-link.people__3(href="#")
+                        li.header__bottom-li
+                            a.header__bottom-link.people__4(href="#")
+                .header__bottom-make
+                    p.header__bottom-text.header__bottom-text-icon|Make a challengs
