02/03/19(made the second block, screwed it adaptive, everything is in process)

--- a/hw4RWD/src/blocks/header/header.scss
+++ b/hw4RWD/src/blocks/header/header.scss
@@ -11,7 +11,11 @@
 
     &__wrap{
         width: 90%;
+        height: 100%;
         margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     &__menu{
