--- a/hw4RWD/src/blocks/header/bottom.scss
+++ b/hw4RWD/src/blocks/header/bottom.scss
@@ -7,6 +7,7 @@
         align-items: center;
         width: 100%;
         margin-top: 8.5rem;
+        margin-bottom: 4.5rem;
     }
 
     &__bottom-ul{
