--- a/hw4RWD/src/pages/index.pug
+++ b/hw4RWD/src/pages/index.pug
@@ -11,4 +11,5 @@ html(lang="en")
     body.body
         .body__wrap
         include ../blocks/header/header.pug
+        include ../blocks/choice/choice.pug
         script(src="./js/main.js")
