--- a/hw4RWD/src/styles/global.scss
+++ b/hw4RWD/src/styles/global.scss
@@ -2,31 +2,55 @@ html{
     font-size: 10px;
 }
 
-@media (min-width: 3600px) {
+// @media (max-width: 3600px) {
+//     html{
+//         font-size: 30px;
+//     }
+// }
+
+@media (min-width: 4200px) {
     html{
-        font-size: 30px;
+        font-size: 40px;
     }
 }
 
-@media (min-width: 2100px) {
+// @media (min-width: 2700px) {
+//     html{
+//         font-size: 20px;
+//     }
+// }
+
+@media (min-width: 2050) {
     html{
-        font-size: 17px;
+        font-size: 15rem;
     }
 }
 
-@media (max-width: 1700) {
-    html{
-        font-size: 13rem;
-    }
-}
+// @media (max-width: 1725) {
+//     html{
+//         font-size: 12.5rem;
+//     }
+// }
 
-@media (max-width: 1600px) {
+@media (max-width: 1400px) {
     html{
         font-size: 10px;
     }
 }
 
-@media (max-width: 1240px) {
+@media (max-width: 1300px) {
+    html{
+        font-size: 8.5px;
+    }
+}
+
+// @media (max-width: 1300px) {
+//     html{
+//         font-size: 9.5px;
+//     }
+// }
+
+@media (max-width: 1120px) {
     html{
         font-size: 8px;
     }
@@ -34,7 +58,14 @@ html{
 
 @media (max-width: 1020px) {
     html{
-        font-size: 7px;
+        font-size: 7.5px;
+    }
+}
+
+
+@media (max-width: 960px) {
+    html{
+        font-size: 6px;
     }
 }
 
@@ -48,6 +79,7 @@ html{
     font-family: 'Lato', sans-serif;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.6rem;
+    // font-size: 1rem;
     max-width: 100%;
     min-width: 16rem;
     margin: 0 auto;
@@ -56,4 +88,8 @@ html{
 a, ul, li{
     text-decoration: none;
     list-style: none;
+}
+
+button{
+    cursor: pointer;
 }
