--- a/hw4RWD/src/styles/main.scss
+++ b/hw4RWD/src/styles/main.scss
@@ -1,6 +1,8 @@
 @import './reset.scss';
-@import './fonts.scss';
 @import './global.scss';
 
 @import './src/blocks/header/header.scss';
-// @import './src/blocks/header/title.scss';
+@import './src/blocks/choice/choice.scss';
+
+@import './fonts.scss';
+@import './btn.scss';
